tests/snapshots/raw__examples_in_informal_reference-75.snap
---
source: tests/raw.rs
expression: "<reference_impl::Lexer>::lex_all(r###\"\"\\\"foo\\\"\"\"###)"
---
Ok(
    [
        Token {
            class: string,
            length: 9,
        },
    ],
)
