tests/snapshots/raw__examples_in_informal_reference-77.snap
---
source: tests/raw.rs
expression: "<reference_impl::Lexer>::lex_all(r###\"\"foo #\\\"# bar\"\"###)"
---
Ok(
    [
        Token {
            class: string,
            length: 14,
        },
    ],
)
