tests/snapshots/raw__examples_in_informal_reference-78.snap
---
source: tests/raw.rs
expression: "<reference_impl::Lexer>::lex_all(r###\"r##\"foo #\"# bar\"##\"###)"
---
Ok(
    [
        Token {
            class: raw_string,
            length: 18,
        },
    ],
)
