tests/snapshots/raw__examples_in_informal_reference-79.snap
---
source: tests/raw.rs
expression: "<reference_impl::Lexer>::lex_all(r###\"\"\\x52\"\"###)"
---
Ok(
    [
        Token {
            class: string,
            length: 6,
        },
    ],
)
