tests/snapshots/raw__examples_in_informal_reference-80.snap
---
source: tests/raw.rs
expression: "<reference_impl::Lexer>::lex_all(r###\"\"R\"\"###)"
---
Ok(
    [
        Token {
            class: string,
            length: 3,
        },
    ],
)
