tests/snapshots/raw__examples_in_informal_reference-83.snap
---
source: tests/raw.rs
expression: "<reference_impl::Lexer>::lex_all(r###\"r\"\\x52\"\"###)"
---
Ok(
    [
        Token {
            class: raw_string,
            length: 7,
        },
    ],
)
